--- a/views/templates/header.tmpl
+++ b/views/templates/header.tmpl
@@ -10,17 +10,6 @@
         <!-- Bootstrap core CSS -->
         <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
 
-        <!-- Favicons -->
-        {{/*    <link rel="apple-touch-icon" href="/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">*/}}
-        {{/*    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">*/}}
-        {{/*    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">*/}}
-        {{/*    <link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json">*/}}
-        {{/*    <link rel="mask-icon" href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">*/}}
-        {{/*    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico">*/}}
-        {{/*    <meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">*/}}
-        {{/*    <meta name="theme-color" content="#563d7c">*/}}
-
-
         <style>
             .bd-placeholder-img {
                 font-size: 1.125rem;
@@ -47,6 +36,9 @@
             <header class="blog-header py-3">
                 <div class="row flex-nowrap justify-content-between align-items-center">
                     <div class="col-4 pt-1">
+                        {{ if .User}}
+                            <a class="text-muted" href="/articles/new">New post</a>
+                        {{end}}
                     </div>
                     <div class="col-4 text-center">
                         <a class="blog-header-logo text-dark" href="/">{{$BlogName}}</a>
